--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="header-inner">
             <button aria-label="Toggle Theme" class="btn-toggle">ENTER THE DARK REALM</button>
             <div class="header-top">
-                <img class="logo" src="./img/wheatlogo.png" alt="">
+                <img class="logo" src="./img/BBEWheat.svg" alt="">
                 <span class="mobile-menu"><img class="menu-icon" src="./img/wheatham.svg" alt=""><img
                         class="menu-close-icon" src="./img/wheatx_icon 1.svg" alt=""></span>
             </div>
@@ -359,13 +359,14 @@
                             class="section-subset-item-title">REACTSTRAP</span></div>
                     <div class="section-subset-item"><img class="sass" src="./img/drupal.svg" alt=""><span
                             class="section-subset-item-title">DRUPAL</span></div>
-                    <div class="section-subset-item"><img src="./img/4747499_github_icon.svg" alt=""><span
-                            class="section-subset-item-title">GITHUB</span></div>
+                    <div class="section-subset-item"><svg class="icon-github-icon">
+                            <use xlink:href="#icon-github_icon"></use>
+                        </svg><span class="section-subset-item-title">GITHUB</span></div>
                     <div class="section-subset-item"><img src="./img/gitlab.svg" alt=""><span
                             class="section-subset-item-title">GITLAB</span></div>
                     <div class="section-subset-item"><img class="reactstrap" src="./img/Gatsby_Monogram.svg"
                             alt=""><span class="section-subset-item-title">GATSBY</span></div>
-                </div>
+
             </section>
         </section>
         <!-- <section>
@@ -395,87 +396,87 @@
                     <div class="gallery-controls"></div>
                 </section> -->
 
-                <script src="carousel.js"></script>
-            </body>
+        <script src="carousel.js"></script>
+</body>
 
-            </html>
+</html>
+</div>
+</section>
+<section id="portfolio" class="portfolio">
+    <header class="section-heading">
+        <h1 class="section-title">Portfolio</h1>
+    </header>
+    <div class="swiper swiper-portfolio">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <a target="_blank" href="./portfolio-projects/tic-tac-toe/index.html"><img
+                        src="./port-projects-pics/tic-tac-toe.png" alt="">
+                </a>
             </div>
-        </section>
-        <section id="portfolio" class="portfolio">
-            <header class="section-heading">
-                <h1 class="section-title">Portfolio</h1>
-            </header>
-            <div class="swiper swiper-portfolio">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <a target="_blank" href="./portfolio-projects/tic-tac-toe/index.html"><img
-                                src="./port-projects-pics/tic-tac-toe.png" alt="">
-                        </a>
-                    </div>
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
-                </div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </section>
-        <section id="contactme">
-            <div id="particles-forms-js"></div>
-            <header class="section-heading">
-                <h1 class="section-title">Contact ME</h1>
-            </header>
-            <div class="form-element">
-                <p>LEAVE YOUR NAME, NUMBER AND EMAIL ALONG WITH A MESSAGE! I’LL GET BACK TO YOU AS SOON AS I CAN!</p>
-                <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
-
-                    <input aria-label="FULL NAME:" type="text" name="fullName" placeholder="Full Name" required />
-                    <input aria-label="EMAIL:" type="email" name="email" placeholder="Email:" required="@">
-                    <input aria-label="PHONE NUMBER:" type="tel" name="phoneNumber" placeholder="Phone Number:"
-                        required="number" />
-                    <textarea aria-label="MESSAGE:" name="message" placeholder="Message:" required></textarea>
-
-                    <div class="form-submit"><button aria-label="" id="my-form-button">Submit</button></div>
-
-                    <p id="my-form-status"></p>
-                </form>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <a class="footer-top-link" href="#top">
-            <svg class="icon-ic_baseline-double-arrow">
-                <use xlink:href="#icon-ic_baseline-double-arrow"></use>
-            </svg>
-
-            Back to the top
-        </a>
-        <div class="footer-copyright">@2022 BIGBODYENTERTAINMENT All Rights Reserved.</div>
-    </footer>
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="modal-content-iframe">
-
-            </div>
+            <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+            <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+            <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
+            <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+            <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
         </div>
+        <div class="swiper-pagination"></div>
+    </div>
+</section>
+<section id="contactme">
+    <div id="particles-forms-js"></div>
+    <header class="section-heading">
+        <h1 class="section-title">Contact ME</h1>
+    </header>
+    <div class="form-element">
+        <p>LEAVE YOUR NAME, NUMBER AND EMAIL ALONG WITH A MESSAGE! I’LL GET BACK TO YOU AS SOON AS I CAN!</p>
+        <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
 
+            <input aria-label="FULL NAME:" type="text" name="fullName" placeholder="Full Name" required />
+            <input aria-label="EMAIL:" type="email" name="email" placeholder="Email:" required="@">
+            <input aria-label="PHONE NUMBER:" type="tel" name="phoneNumber" placeholder="Phone Number:"
+                required="number" />
+            <textarea aria-label="MESSAGE:" name="message" placeholder="Message:" required></textarea>
+
+            <div class="form-submit"><button aria-label="" id="my-form-button">Submit</button></div>
+
+            <p id="my-form-status"></p>
+        </form>
+    </div>
+</section>
+</main>
+<footer>
+    <a class="footer-top-link" href="#top">
+        <svg class="icon-ic_baseline-double-arrow">
+            <use xlink:href="#icon-ic_baseline-double-arrow"></use>
+        </svg>
+
+        Back to the top
+    </a>
+    <div class="footer-copyright">@2022 BIGBODYENTERTAINMENT All Rights Reserved.</div>
+</footer>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <div class="modal-content-iframe">
+
+        </div>
     </div>
 
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/2.0.0/pixi.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/ColorPropsPlugin.min.js"></script>
-    <script src="./js/index.js"></script>
-    <script src="./js/carousel.js"></script>
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/2.0.0/pixi.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/ColorPropsPlugin.min.js"></script>
+<script src="./js/index.js"></script>
+<script src="./js/carousel.js"></script>
 
 </body>
 
