logo is now darkmode btn

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </svg>
     <header class="header">
         <div class="header-inner">
-            <button aria-label="Toggle Theme" class="btn-toggle">ENTER THE DARK REALM</button>
+            <!-- <button aria-label="Toggle Theme" class="btn-toggle">ENTER THE DARK REALM</button> -->
             <div class="header-top">
                 <img class="logo" src="./img/BBEWheat.svg" alt="">
                 <span class="mobile-menu"><img class="menu-icon" src="./img/wheatham.svg" alt=""><img
