--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                         <h2>DEVELOPMENT:</h2>
                         <p>I Learned Front-End And Back-End Development At The LearnAcademy Based In San Diego,
                             California And I Earned The Status Of Full-Stack Developer In The Spring Of '22</p>
-                        <p>From June '22 - July '22 I had the opportunity to intern as a developer @Scientist.com in
-                            the Software Services (Soft-Serve) department</p>
+                        <p>From June '22 - July '22 I had the opportunity to intern as a developer at Scientist.com in
+                            the Software Services (Soft-Serv) department</p>
 
                         <h2>TRANSFERABLE SKILL:</h2>
                         <p>Genuine and productive critical thinking and problem-solving cannot exist in the absence of
