--- a/home.html
+++ b/home.html
@@ -414,7 +414,11 @@
                         src="./port-projects-pics/tic-tac-toe.png" alt="">
                 </a>
             </div>
-            <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+            <div class="swiper-slide">
+                <a target="_blank" href="https://bigbodyent-samirkhoury98.vercel.app/"><img
+                        src="./img/logolanding.png" alt="">
+                </a>
+            </div>
             <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
             <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
             <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
