--- a/home.html
+++ b/home.html
@@ -367,6 +367,9 @@
                             class="section-subset-item-title">GITLAB</span></div>
                     <div class="section-subset-item"><img class="reactstrap" src="./img/Gatsby_Monogram.svg"
                             alt=""><span class="section-subset-item-title">GATSBY</span></div>
+                    <div class="section-subset-item"><img class="reactstrap" src="./img/shopify.svg"
+                            alt=""><span class="section-subset-item-title">SHOPIFY</span></div>
+                    
 
             </section>
         </section>
